@@ -74,6 +74,7 @@ Version 1.0.3 March 1, 2009
 - New #146: Added CUrlManager.appendParams which allows creating URLs in path format whose GET parameters are all in the query part (Qiang)
 - New #150: Register CTabView css file with media type='screen' (Qiang)
 - New #156: Added CUrlManager.cacheID to allow disabling URL rule caching (Qiang)
+- New #213: Enhanced CEmailValidator by allowing checking server port (Qiang)
 - New: Upgraded jquery to 1.3.2 (Qiang)
 - New: Upgraded jquery star rating to 2.61 (Qiang)
 - New: Added skeleton application and refactored 'yiic webapp' command (Qiang)
